--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api_crud_produtos_mem",
+  "name": "api_crud",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -10,6 +10,7 @@
   "author": "Ries",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "mongoose": "^6.5.4"
   }
